Adding support for multiple Protocols.
Not yet ready to pull, but try it.
`
doozerd &
GetWidgets/rand-agent/rand-agent -protocol=json &
GetWidgets/initiator/rand-init/rand-init
GetWidgets/initiator/rand-init/rand-init
GetWidgets/initiator/rand-init/rand-init
`
Works for me!
`
GetWidgets/$ initiators/rand-init/rand-init
Request: 3
Reponse: dqo
Done.
GetWidgets/$ initiators/rand-init/rand-init
Request: 9
Reponse: rnobhiyyd
Done.
GetWidgets/$ initiators/rand-init/rand-init
Request: 10
Reponse: nfxunamqlc
Done.
`

* **rand-init**: Initiator to call MyService.RandString with random arg.
* **rand-agent**: Agent to return a RandomWord of given length.
* New flag: `-protocol`
* This still needs lots of refactoring, debugging, and better logging.

--- a/skygen/Makefile
+++ b/skygen/Makefile
@@ -10,8 +10,8 @@ GOFILES=\
 	reaper.go\
 	router.go\
 	service.go\
-	skygen.go\
 	watcher.go\
+	main.go\
 
 # gb: this is the local install
 GBROOT=..
