--- a/examples/deployment.cfg
+++ b/examples/deployment.cfg
@@ -1,1 +1,1 @@
-github.com/bketelsen/skynet/examples/service -l :9090
+github.com/bketelsen/skynet/examples/service -l :9090-10090 -admin :9090-10090
