still figuring out git. these changes were not being pushed. should be the final versions now.

--- a/dashboard/tmpl/search.html.template
+++ b/dashboard/tmpl/search.html.template
@@ -31,6 +31,9 @@
 		if (!msgreg.val()) {
 			return false;
 		}
+		log.children().each(function(){
+			$(this).remove()
+		});
 		conn.send(msgreg.val());
 		return false
 	});
@@ -44,7 +47,7 @@
 				$(this).css('background-color', "rgb(255, 255, 255)");
 			}
 		});
-		msg.val("");
+		//msg.val("");
 		return false
 	});
 
