--- a/dashboard/tmpl/index.html.template
+++ b/dashboard/tmpl/index.html.template
@@ -1,49 +1,1 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8" />
-  <!-- Set the viewport width to device width for mobile -->
-  <meta name="viewport" content="width=device-width" />
-
-  <title>SkyNet :: Dashboard</title>
-
-  <!-- Included CSS Files -->
-  <link rel="stylesheet" href="/media/stylesheets/foundation.css">
-  <link rel="stylesheet" href="/media/stylesheets/app.css">
-
-  <!--[if lt IE 9]>
-    <link rel="stylesheet" href="/media/stylesheets/ie.css">
-  <![endif]-->
-
-  <script src="/media/javascripts/modernizr.foundation.js"></script>
-
-  <!-- IE Fix for HTML5 Tags -->
-  <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-
-</head>
-<body>
-{{.}}
-  <div class="row">
-    <div class="twelve columns">
-      <h2>SkyNet Dashboard</h2>
-      <p></p>
-      <hr />
-    </div>
-  </div>
-  <div class="row"></div>
-
-  <!-- Included JS Files -->
-  <script src="/media/javascripts/jquery.min.js"></script>
-  <script src="/media/javascripts/jquery.reveal.js"></script>
-  <script src="/media/javascripts/jquery.orbit-1.4.0.js"></script>
-  <script src="/media/javascripts/jquery.customforms.js"></script>
-  <script src="/media/javascripts/jquery.placeholder.min.js"></script>
-  <script src="/media/javascripts/jquery.tooltips.js"></script>
-  <script src="/media/javascripts/app.js"></script>
-</body>
-</html>
+Dashboard to go here
