--- a/dashboard/tmpl/search.html.template
+++ b/dashboard/tmpl/search.html.template
@@ -1,117 +1,11 @@
-<html>
-<head>
-<title>Log Scroller</title>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-<script type="text/javascript">
-	$(function() {
-	var highlight;
-	var conn;
-	var msg = $("#msg");
-	var msgreg = $("#msgreg");
-	var log = $("#log");
+<fieldset>
+  <div id="search-container" class="right">
+    <input type="text" id="search-term"/>
 
-	function appendLog(msg) {
-		var d = log[0]
-		var doScroll = d.scrollTop == d.scrollHeight - d.clientHeight;
-
-		if (msg.text().indexOf(highlight) >= 0) {
-			msg.css('background-color', "rgb(144, 238, 144)");
-		}
-
-		msg.appendTo(log)
-		if (doScroll) {
-			d.scrollTop = d.scrollHeight - d.clientHeight;
-		}
-	}
-
-	$("#form").submit(function() {
-		if (!conn) {
-			return false;
-		}
-		if (!msgreg.val()) {
-			return false;
-		}
-		log.children().each(function(){
-			$(this).remove()
-		});
-		conn.send(msgreg.val());
-		return false
-	});
-
-	$("#hiform").submit(function() {
-		highlight = msg.val();
-		log.children().each(function(){
-			if ($(this).text().indexOf(highlight) >= 0) {
-				$(this).css('background-color', "rgb(144, 238, 144)");
-			} else {
-				$(this).css('background-color', "rgb(255, 255, 255)");
-			}
-		});
-		//msg.val("");
-		return false
-	});
-
-	if (window["WebSocket"]) {
-		conn = new WebSocket("ws://{{$}}/ws");
-		conn.onclose = function(evt) {
-			appendLog($("<div><b>Connection closed.</b></div>"))
-		}
-		conn.onmessage = function(evt) {
-			appendLog($("<div/>").text(evt.data))
-		}
-	} else {
-		appendLog($("<div><b>Your browser does not support WebSockets.</b></div>"))
-	}
-	});
-</script>
-<style type="text/css">
-html {
-	overflow: hidden;
-}
-
-body {
-	overflow: hidden;
-	padding: 0;
-	margin: 0;
-	width: 100%;
-	height: 100%;
-	background: gray;
-}
-
-#log {
-	background: white;
-	margin: 0;
-	padding: 1.5em 1.5em 1.5em 1.5em;
-	position: absolute;
-	top: 2.5em;
-	left: 0.5em;
-	right: 0.5em;
-	bottom: 3em;
-	overflow: auto;
-}
-
-#hiform {
-	padding: 0 0.5em 0 0.5em;
-	margin: 0;
-	position: absolute;
-	bottom: 1em;
-	left: 0px;
-	width: 100%;
-	overflow: hidden;
-}
-
-</style>
-</head>
-<body>
-<p>
-<form id="form">
-	<input type="submit" value="search" />
-	<input type="text" id="msgreg" size="120"/>
-</form>
-<div id="log"></div>
-<form id="hiform">
-	<input type="submit" value="highlight:" />
-	<input type="text" id="msg" size="120"/>
-</form>
-</body>
-</html>
+    <ul class="button-group radius right">
+      <li><a id="log-search" href="#" class="small button radius success">Search</a></li>
+      <li><a id="log-highlight" href="#" class="small button radius">Highlight</a></li>
+    </ul>
+  </div>
+</fieldset>
+<div id="log" class="panel secondary"></div>
