--- a/examples/Vagrantfile
+++ b/examples/Vagrantfile
@@ -5,7 +5,14 @@ NUM_SKYNET_NODES = 3
 
 Vagrant::Config.run do |config|
   #doozerd -timeout 5 -l "127.0.0.1:10000" -w "127.0.0.1:11000" -c "dzns"
- 
+
+  gps = ENV["GOPATH"].split(":")
+  gpi = 0
+  gps.each do |gp| 
+    config.vm.share_folder("gp#{gpi}", "/opt/hostgopaths/gp#{gpi}", gp)
+    gpi += 1
+  end
+
 
   # This will be our doozer, and dzns master
   config.vm.define :skynet1 do |c|
