--- a/dashboard/tmpl/layout.html.template
+++ b/dashboard/tmpl/layout.html.template
@@ -58,6 +58,10 @@
   <script src="/media/javascripts/jquery.placeholder.min.js"></script>
   <script src="/media/javascripts/jquery.tooltips.js"></script>
   <script src="/media/javascripts/mustache.js"></script>
+  <script src="/media/javascripts/json2.js"></script>
+  <script src="/media/javascripts/underscore-min.js"></script>
+  <script src="/media/javascripts/backbone-min.js"></script>
   <script src="/media/javascripts/app.js"></script>
+  <script src="/media/javascripts/node-list.js"></script>
 </body>
 </html>
