make sure binaries are ignored by git

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ examples/service/service
 examples/client/client
 dashboard/dashboard
 examples/.vagrant
+examples/testing/fibonacci/fibservice/fibservice
+examples/testing/fibonacci/fibclient/fibclient
