--- a/dashboard/tmpl/layout.html.template
+++ b/dashboard/tmpl/layout.html.template
@@ -51,7 +51,8 @@
   <div class="row"></div>
 
   <!-- Included JS Files -->
-  <script src="/media/javascripts/jquery.min.js"></script>
+  <script src="/media/javascripts/jquery-1.8.0.min.js"></script>
+  <script src="/media/javascripts/jquery-ui-1.8.23.custom.min.js"></script>
   <script src="/media/javascripts/jquery.reveal.js"></script>
   <script src="/media/javascripts/jquery.orbit-1.4.0.js"></script>
   <script src="/media/javascripts/jquery.customforms.js"></script>
