start of test harness for vagrant

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ dashboard/dashboard
 examples/.vagrant
 examples/testing/fibonacci/fibservice/fibservice
 examples/testing/fibonacci/fibclient/fibclient
+examples/testing/vagrant/vagrant
