service now updates doozer at a configured interval, which includes the current client count, dashboard now shows uptime of the service and updates with the client count when the service updates doozer, still need to track the average response time, and last request so that it comes along with the doozer update the service makes

--- a/dashboard/tmpl/layout.html.template
+++ b/dashboard/tmpl/layout.html.template
@@ -58,6 +58,7 @@
   <script src="/media/javascripts/jquery.customforms.js"></script>
   <script src="/media/javascripts/jquery.placeholder.min.js"></script>
   <script src="/media/javascripts/jquery.tooltips.js"></script>
+  <script src="/media/javascripts/jquery.timeago.js"></script>
   <script src="/media/javascripts/mustache.js"></script>
   <script src="/media/javascripts/json2.js"></script>
   <script src="/media/javascripts/underscore-min.js"></script>
