--- a/dashboard/tmpl/index.html.template
+++ b/dashboard/tmpl/index.html.template
@@ -41,6 +41,7 @@
         <th>Clients</th>
         <th>Uptime</th>
         <th>Avg Response Time</th>
+        <th>Last Request</th>
       </thead>
       <tbody>
       </tbody>
@@ -56,7 +57,8 @@
   <td><%attributes.adminAddress%></td>
   <td><%attributes.registered%></td>
   <td><%attributes.clients%></td>
-  <td><%attributes.uptime%></td>
-  <td><%attributes.averageResponseTime%></td>
+  <td class="timeago" title="<%uptime%>"><%uptime%></td>
+  <td><%averageResponseTime%></td>
+  <td><%lastRequest%></td>
 </tr>
 </script>
