--- a/examples/Vagrantfile
+++ b/examples/Vagrantfile
@@ -42,7 +42,7 @@ Vagrant::Config.run do |config|
       chef.add_recipe("git")
       chef.add_recipe("bzr")
       chef.add_recipe("go")
-      chef.add_recipe("mongodb")
+      chef.add_recipe("mongodb::10gen_repo")
       chef.add_recipe("doozerd")
       chef.add_recipe("skynet-example")
     end
