--- a/examples/Vagrantfile
+++ b/examples/Vagrantfile
@@ -44,6 +44,7 @@ Vagrant::Config.run do |config|
       chef.add_recipe("go")
       chef.add_recipe("mongodb::10gen_repo")
       chef.add_recipe("doozerd")
+      chef.add_recipe("skynet-example::mongo")
       chef.add_recipe("skynet-example")
     end
 
