--- a/examples/Vagrantfile
+++ b/examples/Vagrantfile
@@ -44,8 +44,10 @@ Vagrant::Config.run do |config|
       chef.add_recipe("go")
       chef.add_recipe("mongodb::10gen_repo")
       chef.add_recipe("doozerd")
-      chef.add_recipe("skynet::mongo")
       chef.add_recipe("skynet")
+      chef.add_recipe("skynet::mongo_log")
+      chef.add_recipe("skynet::example_service")
+      chef.add_recipe("skynet::fibservice")
     end
 
 
@@ -93,6 +95,8 @@ Vagrant::Config.run do |config|
         chef.add_recipe("go")
         chef.add_recipe("doozerd")
         chef.add_recipe("skynet")
+        chef.add_recipe("skynet::example_service")
+        chef.add_recipe("skynet::fibservice")
       end
 
       # Setup DZNS Node
