moving daemon to it's own binary, also moved vagrant subnet to 192.168.126.1 as it was conflicting with another network

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ sky/sky
 .DS_Store
 examples/service/service
 examples/client/client
+daemon/daemon
 dashboard/dashboard
 examples/.vagrant
 examples/testing/fibonacci/fibservice/fibservice
