reorganizing dashboard, sky, and daemon to be under the cmd/ directory so that binaries are in one area, and can maintain their names when doing go install, and can be seperated from the libraries that power them

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-sky/sky
+cmd/sky/sky
 .DS_Store
 examples/service/service
 examples/client/client
-daemon/daemon
-dashboard/dashboard
+cmd/daemon/daemon
+cmd/dashboard/dashboard
 examples/.vagrant
 examples/testing/fibonacci/fibservice/fibservice
 examples/testing/fibonacci/fibclient/fibclient
