prevent daemon from crashing if subservice fails to start and returns a nil pointer for Proc

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ cmd/sky/sky
 .DS_Store
 examples/service/service
 examples/client/client
-cmd/daemon/daemon
+cmd/skydaemon/skydaemon
 cmd/dashboard/dashboard
 examples/.vagrant
 examples/testing/fibonacci/fibservice/fibservice
