--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ cmd/sky/sky
 .DS_Store
 examples/service/service
 examples/client/client
+examples/tutorial/service
+examples/tutorial/client
 cmd/skydaemon/skydaemon
 cmd/dashboard/dashboard
 examples/.vagrant
