--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ examples/.vagrant
 examples/testing/fibonacci/fibservice/fibservice
 examples/testing/fibonacci/fibclient/fibclient
 examples/testing/vagranttests/vagranttests
+*~
+*.swp
