Used reflection to add skynet.LogPayload's field names (with associated checkboxes) to dashboard.go's /logs/search.

--- a/cmd/dashboard/tmpl/search.html.template
+++ b/cmd/dashboard/tmpl/search.html.template
@@ -1,8 +1,12 @@
 <fieldset>
   <div id="search-container" class="right">
 
+    {{range $i, $v := .LogPayloadFieldNames}}
+    <input type="checkbox" name="{{$v}}" value="" />{{$v}}<br />
+    {{end}}
+
     <select id="database-collection">
-    {{range $i, $v := .}} 
+    {{range $i, $v := .DBsAndCollections}}
     <option>{{$v}}</option>
     {{end}}
     </select>
