--- a/examples/Vagrantfile
+++ b/examples/Vagrantfile
@@ -41,8 +41,6 @@ Vagrant::Config.run do |config|
         :skynet_min_port => '9000',
         :skynet_max_port => '9999',
         :skynet_bind_ip => '192.168.126.101',
-        :skynet_mgoserver => '192.168.126.101:27017',
-        :skynet_mgodb => ''
       }
 
       chef.add_recipe("apt")
@@ -51,12 +49,10 @@ Vagrant::Config.run do |config|
       chef.add_recipe("git")
       chef.add_recipe("bzr")
       chef.add_recipe("go")
-      chef.add_recipe("mongodb::10gen_repo")
       chef.add_recipe("doozerd")
       chef.add_recipe("skynet")
       chef.add_recipe("skynet::daemon")
       chef.add_recipe("skynet::dashboard")
-      chef.add_recipe("skynet::mongo_log")
       chef.add_recipe("skynet::example_service")
       chef.add_recipe("skynet::fibservice")
     end
@@ -117,8 +113,6 @@ Vagrant::Config.run do |config|
           :skynet_min_port => '9000',
           :skynet_max_port => '9999',
           :skynet_bind_ip => "192.168.126.10#{i}",
-          :skynet_mgoserver => '192.168.126.101:27017',
-          :skynet_mgodb => ''
         }
 
         chef.add_recipe("build-essential")
@@ -139,7 +133,7 @@ Vagrant::Config.run do |config|
       c.vm.provision :shell, :inline => "nohup doozerd -timeout 5 -l '192.168.126.10#{i}:8046' -w '192.168.126.10#{i}:8080' -c 'skynet' -b 'doozer:?ca=192.168.126.101:10000' 0<&- &> /var/log/doozer.log &"
 
       # Start Daemon
-      c.vm.provision :shell, :inline => "nohup /opt/local/gopath/bin/skydaemon -mgoserver='192.168.126.101:27017' --version=1 0<&- &> /var/log/skynet_daemon.log &"
+      c.vm.provision :shell, :inline => "nohup /opt/local/gopath/bin/skydaemon --version=1 0<&- &> /var/log/skynet_daemon.log &"
 
       # Start Services
       c.vm.provision :shell, :inline => "sleep 15 && sky --host=192.168.126.10#{i} deploy github.com/skynetservices/skynet/examples/service --version=1"
