--- a/examples/Vagrantfile
+++ b/examples/Vagrantfile
@@ -70,13 +70,13 @@ Vagrant::Config.run do |config|
     c.vm.provision :shell, :inline => "nohup /opt/local/gopath/bin/dashboard -addr 192.168.126.101:80 --webroot=/opt/local/gopath/src/github.com/skynetservices/skynet/cmd/dashboard 0<&- &> /var/log/skynet_dashboard.log &"
 
     # Start Services
-    c.vm.provision :shell, :inline => "sleep 10 && sky --host=192.168.126.101 deploy github.com/skynetservices/skynet/examples/service --version=1"
-    c.vm.provision :shell, :inline => "sky --host=192.168.126.101 deploy github.com/skynetservices/skynet/examples/service --version=1"
-    c.vm.provision :shell, :inline => "sky --host=192.168.126.101 deploy github.com/skynetservices/skynet/examples/service --version=2"
+    c.vm.provision :shell, :inline => "sleep 10 && sky --host=192.168.126.101 start service --version=1"
+    c.vm.provision :shell, :inline => "sky --host=192.168.126.101 start service --version=1"
+    c.vm.provision :shell, :inline => "sky --host=192.168.126.101 start service --version=2"
 
-    c.vm.provision :shell, :inline => "sky --host=192.168.126.101 deploy github.com/skynetservices/skynet/examples/testing/fibonacci/fibservice --version=1"
-    c.vm.provision :shell, :inline => "sky --host=192.168.126.101 deploy github.com/skynetservices/skynet/examples/testing/fibonacci/fibservice --version=1"
-    c.vm.provision :shell, :inline => "sky --host=192.168.126.101 deploy github.com/skynetservices/skynet/examples/testing/fibonacci/fibservice --version=2"
+    c.vm.provision :shell, :inline => "sky --host=192.168.126.101 start fibservice --version=1"
+    c.vm.provision :shell, :inline => "sky --host=192.168.126.101 start fibservice --version=1"
+    c.vm.provision :shell, :inline => "sky --host=192.168.126.101 start fibservice --version=2"
 
 
     # Open additional doozer slots in case we start more nodes
@@ -136,13 +136,13 @@ Vagrant::Config.run do |config|
       c.vm.provision :shell, :inline => "nohup /opt/local/gopath/bin/skydaemon --version=1 0<&- &> /var/log/skynet_daemon.log &"
 
       # Start Services
-      c.vm.provision :shell, :inline => "sleep 15 && sky --host=192.168.126.10#{i} deploy github.com/skynetservices/skynet/examples/service --version=1"
-      c.vm.provision :shell, :inline => "sky --host=192.168.126.10#{i} deploy github.com/skynetservices/skynet/examples/service --version=1"
-      c.vm.provision :shell, :inline => "sky --host=192.168.126.10#{i} deploy github.com/skynetservices/skynet/examples/service --version=2"
+      c.vm.provision :shell, :inline => "sleep 15 && sky --host=192.168.126.10#{i} start service --version=1"
+      c.vm.provision :shell, :inline => "sky --host=192.168.126.10#{i} start service --version=1"
+      c.vm.provision :shell, :inline => "sky --host=192.168.126.10#{i} start service --version=2"
 
-      c.vm.provision :shell, :inline => "sky --host=192.168.126.10#{i} deploy github.com/skynetservices/skynet/examples/testing/fibonacci/fibservice --version=1"
-      c.vm.provision :shell, :inline => "sky --host=192.168.126.10#{i} deploy github.com/skynetservices/skynet/examples/testing/fibonacci/fibservice --version=1"
-      c.vm.provision :shell, :inline => "sky --host=192.168.126.10#{i} deploy github.com/skynetservices/skynet/examples/testing/fibonacci/fibservice --version=2"
+      c.vm.provision :shell, :inline => "sky --host=192.168.126.10#{i} start fibservice --version=1"
+      c.vm.provision :shell, :inline => "sky --host=192.168.126.10#{i} start fibservice --version=1"
+      c.vm.provision :shell, :inline => "sky --host=192.168.126.10#{i} start fibservice --version=2"
 
 
       #c.vm.share_folder "skynet", "/opt/skynet", "../"
