--- a/examples/service/build.cfg
+++ b/examples/service/build.cfg
@@ -1,12 +1,13 @@
 {
-  "Host": "home",
+  "Host": "kratos:22",
+  "User": "erik",
   "Jail": "/home/erik/build",
 
   "CGO_CFLAGS": "-I/home/erik/go/code/src/github.com/skynetservices/skynet/tools/starter-kit-linux/zookeeper/include",
   "CGO_LDFLAGS": "/home/erik/go/code/src/github.com/skynetservices/skynet/tools/starter-kit-linux/zookeeper/lib/libzookeeper_mt.a -lm",
 
-  "GOROOT": "/home/erik/go/code",
-  "GOPATH": "/home/erik/go/go",
+  "GOROOT": "/home/erik/go/go",
+  "GOPATH": "/home/erik/go/code",
 
   "AppRepo": "git@github.com:skynetservices/skynet.git",
   "RepoType": "git",
